--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "wordpress"]
 	path = wordpress
 	url = git://github.com/EduSantosBrito/wordpress-tcc.git
+[submodule "esio"]
+	path = esio
+	url = git://github.com/EduSantosBrito/esio-tcc.git
