--- a/default.conf
+++ b/default.conf
@@ -2,9 +2,23 @@ upstream wordpress_host {
     server wordpress:80;
 }
 
+upstream esio_host {
+    server esio:3000;
+}
+
+
 server {
     listen 80;
     server_name localhost;
+
+    location /esio {
+        proxy_pass http://esio_host/;
+        proxy_redirect http://server_name http://esio_host;
+
+        proxy_set_header   X-Real-IP          $remote_addr;
+        proxy_set_header   Host               $host;
+        proxy_set_header   X-Forwarded-For    $proxy_add_x_forwarded_for;
+    }
     
     location /wordpress {
         proxy_pass http://wordpress_host;
