--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     restart: always
     ports:
       - 8080:80
-    depends_on: 
+    depends_on:
       - db
     environment:
       WORDPRESS_DB_HOST: db
@@ -35,3 +35,28 @@ services:
       MYSQL_RANDOM_ROOT_PASSWORD: "1"
     volumes:
       - ./db:/var/lib/mysql
+  esio:
+    build:
+      context: ./esio
+      dockerfile: Dockerfile
+    restart: always
+    environment:
+      NODE_ENV: production
+      NODE_PORT: 3000
+      NODE_HOST: esio
+      API_URL: http://localhost:3000
+      REACT_APP_API_URL: http://localhost:3000
+      MONGO_PORT: 27017
+      MONGO_HOST: mongo
+      MONGO_DATABASE: esiodb
+    ports:
+      - "3000:3000"
+    depends_on:
+      - mongo
+  mongo:
+    image: mongo
+    restart: always
+    volumes:
+      - ./data:/data/db
+    ports:
+      - "27017:27017"
