--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,10 @@ services:
       - "3000:3000"
     depends_on:
       - mongo
+    ulimits: 
+      nofile:
+        soft: 20000
+        hard: 40000
   mongo:
     image: mongo
     restart: always
