--- a/default.conf
+++ b/default.conf
@@ -9,7 +9,7 @@ upstream esio_host {
 
 server {
     listen 80;
-    server_name 0.0.0.0;
+    server_name http://gameshowbrasil.com.br;
 
     location /esio {
         proxy_pass http://esio_host/;
