--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,8 +45,8 @@ services:
       NODE_ENV: production
       NODE_PORT: 3000
       NODE_HOST: esio
-      API_URL: http://0.0.0.0:3000
-      REACT_APP_API_URL: http://0.0.0.0:3000
+      API_URL: http://gameshowbrasil.com.br:3000
+      REACT_APP_API_URL: http://gameshowbrasil.com.br:3000
       MONGO_PORT: 27017
       MONGO_HOST: mongo
       MONGO_DATABASE: esiodb
